fix(css): fix about section breaking UI on smaller screens

--- a/client/css/app.css
+++ b/client/css/app.css
@@ -317,6 +317,17 @@ a:active {
   height: 323px;
   margin-right: 30px;
   width: 300px;
+  overflow-y: scroll;
+}
+
+@media (max-width: 850px),
+  (max-width: 900px) and (-webkit-min-device-pixel-ratio: 3),
+  (max-width: 900px) and (min-resolution: 3dppx) {
+  #ad-block-left {
+      margin-right: 18px;
+      height: 230px;
+      width: 200px;
+  }
 }
 
 .ad-block-med-rect {
